# CrawlForge

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  c08_analysis.js  config.yaml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  spiderbuf_raw.html
core/: __init__.py  har_parser.py  js_decrypt.py  proxy_pool.py  signature.py
demos/: crawl_zhipin.py  douban_crawler.py  douban_results.json  enhanced_crawler_demo.py  jwc_notices.json  jwc_raw.html  jwc_results.json  jwc_sptc.py  jwc_sptc_crawler.py  jwc_tzgg_results.json  lianjia_crawler.py  lianjia_results.json  mingblog_crawler.py  mingblog_results.json  spiderbuf_c08_results.json  spiderbuf_c09.py  spiderbuf_c09_results.json  spiderbuf_c11.py  spiderbuf_c11_results.json  spiderbuf_c13_results.json  test_sample.har  test_zhipin.py  test_zhipin_analysis.py
docs/: ai-assisted-crawler.md  crawler-reverse-deep-research.md  distributed-crawler.md  js-reverse-engineering.md
extractors/: __init__.py  base.py  html_extractor.py  json_extractor.py
handlers/: __init__.py  retry.py
src/: __init__.py  advanced_crawler.py  captcha_solver.py  cli.py  config_manager.py  data_processor.py  distributed_tasks.py  humanizer.py  js_hook_tools.py  logger.py  monitor.py  page_analyzer.py  proxy_manager.py  rate_limiter.py  stealth_browser.py  tls_fingerprint.py  ucp_browser.py
templates/: __init__.py  site_template.py
tests/: conftest.py  test_advanced_crawler.py  test_captcha_solver.py  test_config_manager.py  test_logger.py  test_monitor.py  test_proxy_manager.py  (+1 more)
(+8 files in other folders)
