[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crawlforge"
version = "2.0.0"
description = "爬虫逆向框架"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*", "core*", "handlers*", "extractors*", "src*", "templates*"]
